<resources>
    <string name="app_name">eh-Ho</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="label_topics">Topics</string>
    <string name="label_create_new_account">Create new account</string>
    <string name="label_sign_up">Sign Up</string>
    <string name="confirm_password">Confirm parsword</string>
    <string name="label_sign_in">Sign in</string>
    <string name="email">Email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_title">Title</string>
    <string name="hint_content">Content</string>
    <string name="hint_Author">Author</string>
    <string name="lable_send">Send</string>
    <string name="error_empty">This field cannot be empty</string>

    <plurals name="years">
        <item quantity="one">%d year</item>
        <item quantity="other">%d years</item>
    </plurals>
    <plurals name="months">
        <item quantity="one">%d month</item>
        <item quantity="other">%d months</item>
    </plurals>
    <plurals name="days">
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>
    <plurals name="hours">
        <item quantity="one">%d hour</item>
        <item quantity="other">%d hours</item>
    </plurals>
    <plurals name="minutes">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <string name="minutes_zero">Just now</string>
    <string name="label_loading">Loading</string>
    <string name="Logout">Logout</string>
    <string name="error_not_reg">User not registered</string>
    <string name="error_not_internet">No Internet connection</string>
    <string name="error_default">Something bad happened</string>
    <string name="message_sign_up">Please check your email to end the proccess</string>
    <string name="error_duplicated_topic">Title has been already used</string>
    <string name="label_creating_topic">Creating topic</string>
    <string name="error_not_same_password">Passwords must match</string>
    <string name="something_bad">Ooops something bad happened</string>
    <string name="label_retry">RETRY</string>
    <string name="title_author">Author:</string>
    <string name="title_content">Content:</string>
    <string name="title_date">"Date: "</string>
    <string name="hint_date">Date</string>
    <string name="lable_addPost">Add post</string>
    <string name="hint_Topic">Topic</string>
    <string name="topic_id">Topic ID: </string>
</resources>