<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:layout_margin="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_author"
                android:textSize="16sp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"/>
            <TextView
                android:layout_weight="1"
                android:id="@+id/labelAuthor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_Author"
                android:textSize="16sp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="48dp">
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_date"
                android:textSize="16sp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"/>
            <TextView
                android:layout_weight="1"
                android:id="@+id/labelPostDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_date"
                android:textSize="16sp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="96dp">
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_content"
                android:textSize="16sp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"/>
            <TextView
                android:layout_weight="1"
                android:id="@+id/labelPostContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_content"
                android:gravity="top"
                android:minHeight="112dp"
                android:textSize="16sp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"/>
        </LinearLayout>

</androidx.cardview.widget.CardView>